--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 		</header>
-		<h2>мій песюн</h2>
+		<h2>мій песюн 2 см</h2>
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
