--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,51 @@
 				</div>
 			</div>
 		</header>
-		<h2>мій песюн 2 см</h2>
-
+		<section class="main-info">
+			<img src="img/orig.jfif" alt="">
+				<div class="container-small">
+					<div class="main-info__inner">
+						<span class="main-sup">Международные транспортные перевозки</span>
+						<h1>Транспортные компании со всех стран,
+							доставка всех типов грузов!</h1>
+						<p>Все способы и типы перевозок. Выбери перевозчика</p>
+						<form class="main-form">
+							<select name="location">
+								<option value="">От куда ?</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+							</select>
+							<select name="place">
+								<option value="">Куда ?</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+							</select>
+							<select name="car">
+								<option value="">Машины</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+								<option value="text">Текст</option>
+							</select>
+							<button class="btn">Получить предложение за несколько минут</button>
+						</form>
+					</div>
+				</div>
+		</section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
