--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 							доставка всех типов грузов!</h1>
 						<p>Все способы и типы перевозок. Выбери перевозчика</p>
 						<form class="main-form">
-							<select name="location">
+							<div class="icon"><select name="location">
 								<option value="">От куда ?</option>
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
@@ -66,8 +66,8 @@
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
-							</select>
-							<select name="place">
+							</select></div>
+							<div class="icon"><select name="place">
 								<option value="">Куда ?</option>
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
@@ -75,8 +75,8 @@
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
-							</select>
-							<select name="car">
+							</select></div>
+							<div class="icon"><select name="car">
 								<option value="">Машины</option>
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
@@ -88,11 +88,50 @@
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
 								<option value="text">Текст</option>
-							</select>
+							</select></div>
 							<button class="btn">Получить предложение за несколько минут</button>
 						</form>
 					</div>
 				</div>
+		</section>
+		<section class="success">
+			<div class="container">
+				<div class="success__wrappper">
+					<div class="success__wrappper-item">
+						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
+						<p>100% гарантия качества</p>
+					</div>
+					<div class="success__wrappper-item">
+						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
+						<p>100% гарантия качества</p>
+					</div>
+					<div class="success__wrappper-item">
+						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
+						<p>100% гарантия качества</p>
+					</div>
+					<div class="success__wrappper-item">
+						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
+						<p>100% гарантия качества</p>
+					</div>
+					<div class="success__wrappper-item">
+						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
+						<p>100% гарантия качества</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="question">
+			<div class="question__wrapper">
+				<div class="question__wrapper-item">
+					<img src="img/question.jpg" alt="">
+				</div>
+				<div class="question__wrapper-item">
+					<h2>Как работает сервис</h2>
+					<ul class="question-list">
+						<li class="question-item"></li>
+					</ul>
+				</div>
+			</div>
 		</section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
