--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 			</div>
 		</header>
 		<section class="main-info">
-			<img src="img/orig.jfif" alt="">
+			<img src="img/orig.jpg" alt="">
 				<div class="container-small">
 					<div class="main-info__inner">
 						<span class="main-sup">Международные транспортные перевозки</span>
@@ -96,28 +96,38 @@
 		</section>
 		<section class="success">
 			<div class="container">
-				<div class="success__wrappper">
-					<div class="success__wrappper-item">
-						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
-						<p>100% гарантия качества</p>
-					</div>
-					<div class="success__wrappper-item">
-						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
-						<p>100% гарантия качества</p>
-					</div>
-					<div class="success__wrappper-item">
-						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
-						<p>100% гарантия качества</p>
-					</div>
-					<div class="success__wrappper-item">
-						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
-						<p>100% гарантия качества</p>
-					</div>
-					<div class="success__wrappper-item">
-						<div class="success__wrappper-img"><img src="img/Path_20.png" alt=""></div>
-						<p>100% гарантия качества</p>
-					</div>
-				</div>
+				<ul class="success__wrapper">
+					<li class="success__wrapper-item">
+						<a href="#" class="success__wrapper-link">
+							<div class="success__wrapper-img"><img src="img/Path_20.png" alt=""></div>
+							<p>Победитель конкурса ТОП-10 2017</p>
+						</a>
+					</li>
+					<li class="success__wrapper-item">
+						<a href="#" class="success__wrapper-link">
+							<div class="success__wrapper-img"><img src="img/Path_20.png" alt=""></div>
+							<p>Продаваемость коллеции 94%</p>
+						</a>
+					</li>
+					<li class="success__wrapper-item">
+						<a href="#" class="success__wrapper-link">
+							<div class="success__wrapper-img"><img src="img/Path_20.png" alt=""></div>
+							<p>100% гарантия качества</p>
+						</a>
+					</li>
+					<li class="success__wrapper-item">
+						<a href="#" class="success__wrapper-link">
+							<div class="success__wrapper-img"><img src="img/Path_20.png" alt=""></div>
+							<p>Большой ассортимент и приятные цены</p>
+						</a>	
+					</li>
+					<li class="success__wrapper-item">
+						<a href="#" class="success__wrapper-link">
+							<div class="success__wrapper-img"><img src="img/Path_20.png" alt=""></div>
+							<p>Рекламная поддержка</p>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 		<section class="question">
@@ -128,7 +138,29 @@
 				<div class="question__wrapper-item">
 					<h2>Как работает сервис</h2>
 					<ul class="question-list">
-						<li class="question-item"></li>
+						<li class="question-list__item-wrap">
+							<div class="question-list__item">
+								<p>Запросите расценки у наших 102,334 оцененных транспортных 
+									провайдеров.</p>
+							</div>
+						</li>
+						<li class="question-list__item-wrap">
+							<div class="question-list__item">
+								<p>Запросите расценки у наших 102,334 оцененных транспортных 
+									провайдеров.</p>
+							</div>
+						</li>
+						<li class="question-list__item-wrap">
+							<div class="question-list__item">
+								<p>Запросите расценки у наших 102,334 оцененных транспортных 
+									провайдеров.</p>
+							</div>
+						</li>
+						<li class="question-list__item-wrap">
+							<div class="question-list__item">
+								<p>Остались вопросы?</p>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
